--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Recipe Book</title>
+        <title>Recipe Book</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,9 @@
             <a href="">Share Your Own Recipes</a>
         </nav>
         <!--Search a recipe-->
-        <div></div>
+        <div class="searchBox">
+            <input type="text" placeholder="Search a recipe">
+        </div>
         <!--Popular Recipes-->
         
         <h2>Popular Recipes</h2>
